<resources>
    <string name="app_name">Aviato</string>
    <string name="flight_header_from">From</string>
    <string name="flight_header_to">To</string>
    <string name="flight_header_airline">Airline</string>
    <string name="home_flights">Find Flights</string>
    <string name="home_under_construction">Coming soon</string>
    <string name="home_subscriptions">Subscriptions</string>
    <string name="home_settings">Settings</string>
    <string name="home_notifications">Notifications</string>
    <string name="notification_storage">notifications.txt</string>
    <string name="button_subscribe">Subscribe</string>
    <string name="overview_header_overview">Flight Overview</string>
    <string name="placeholder_subscriptions">You don\'t have any subscriptions</string>
    <string name="placeholder_notifications">You don\'t have any notifications</string>
    <string name="flight_item_source">Source</string>
    <string name="flight_item_destination">Destination</string>
    <string name="flight_item_airline">Airline</string>
    <string name="flight_item_arrival_value">ArrValue</string>
    <string name="flight_item_departure_value">DepValue</string>
    <string name="flight_item_departure">Departure</string>
    <string name="flight_item_airport">Airport</string>
    <string name="flight_item_arrival">Arrival</string>
    <string name="flight_item_status">Status</string>
    <string name="flight_item_carrier_code">CarrierCode</string>
    <string name="flight_item_flight_id">FlightID</string>
    <string name="flight_item_gate_departure">DepGate</string>
    <string name="flight_item_gate_arrival">ArrGate</string>
    <string name="flight_item_terminal_departure">DepTerminal</string>
    <string name="flight_item_terminal_arrival">ArrTerminal</string>
    <string name="flight_item_overview">Flight Overview</string>
    <string name="flight_item_status_holder">Status:</string>
    <string name="flight_item_departure_holder">DEPARTURE</string>
    <string name="flight_item_depart_holder">DEPARTS</string>
    <string name="flight_item_terminal_holder">TERMINAL</string>
    <string name="flight_item_gate_holder">GATE</string>
    <string name="flight_item_arrives_holder">ARRIVES</string>
    <string name="flight_item_arrival_holder">ARRIVAL</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="subscription_settings">Susbcription Settings</string>
    <string name="title_notifications_switch">Switch Notifications</string>
    <string name="summary_notifications_switch">Switches notifications on and off</string>
    <string name="title_notifications_sound_switch">Notifications sound</string>
    <string name="summary_notifications__sound_switch">Switches on and off the notifications sound</string>
    <string name="title_list_notifications_limit">Number of notifications Stored</string>
    <string name="summary_list_notifications_limit">Select the amount of old notifications you wish to store</string>
    <string name="dialog_title_list_notifications_limit">Notifications limit</string>
    <string name="title_subscription_update">Update frequency</string>
    <string name="summary_subscription_update">Updateshow frequently the app updates the subscribed flights</string>
    <string name="dialog_title_subscription_update">Update frequency</string>
    <string name="time_window_holder">Upto 6 hours</string>
    <string name="title_list_notifications_time">Time to Notify in Advance</string>
    <string name="summary_list_notifications_time">Set the minutes in advance the app will notify you of yoru subscribed flights</string>
    <string name="dialog_title_list_notifications_time">Notify time</string>
    <string name="about_app">About Aviato</string>
    <string name="share_button">Share</string>
    <string name="share_button_summary">Tip a friend about Aviato</string>
    <string name="share_button_title">Share</string>
    <string name="credits_title">Credits</string>
    <string name="credits_summary">Aviato was developed by Team 6 in EDA397</string>
    <string name="email_body">It is really handy when it comes to getting notifications on inbound and outbound flights! :-)</string>
    <string name="email_subject">Check out Aviato!</string>
    <string name="fifteen_min">15 min</string>
    <string name="thirty_min">30 min</string>
    <string name="sixty_min">60 min</string>
    <string name="onehundredtwenty_min">120 min</string>


</resources>
