<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlSingleFlightOverview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSingleFlightDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/rlStatusInfo"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:background="@drawable/shadow"
            android:backgroundTint="@color/colorButtonIcon"
            android:layout_marginTop="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

        </RelativeLayout>

        <TextView
            android:id="@+id/tvAirlineName"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/rlStatusInfo"
            android:layout_alignStart="@+id/rlStatusInfo"
            android:layout_alignTop="@+id/rlStatusInfo"
            android:layout_marginTop="13dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="AIRLINE"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/tvAirlineName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:background="@color/colorDefaultFlightStatus"
            android:gravity="center"
            android:text="STATUS"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDeparts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp"
            android:text="@string/flight_item_depart_holder"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/rlStatusInfo"
            android:layout_alignStart="@+id/tvSource" />

        <TextView
            android:id="@+id/tvSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvScheduled"
            android:layout_below="@+id/tvDeparts"
            android:layout_marginRight="0dp"
            android:layout_marginTop="18dp"
            android:text="SOURCE"
            android:textAlignment="viewStart"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvScheduled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/flight_item_departure_holder"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/tvSource"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvDepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvDepTerminal"
            android:layout_alignBottom="@+id/tvDepTerminal"
            android:layout_alignStart="@+id/tvScheduled"
            android:text="@string/flight_item_departure_value"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvGateDep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_item_gate_holder"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/tvTerminaDep"
            android:layout_alignBottom="@+id/tvTerminaDep"
            android:layout_alignStart="@+id/tvDepGate" />

        <TextView
            android:id="@+id/tvTerminaDep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_item_terminal_holder"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/tvScheduled"
            android:layout_alignBottom="@+id/tvScheduled"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvDepGate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/rlStatusInfo"
            android:layout_below="@+id/tvGateDep"
            android:layout_marginTop="14dp"
            android:text="@string/flight_item_gate_departure"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvDepTerminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvDepGate"
            android:layout_alignBottom="@+id/tvDepGate"
            android:layout_alignStart="@+id/tvTerminaDep"
            android:text="@string/flight_item_terminal_departure"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvArrives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_item_arrives_holder"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="19dp"
            android:layout_below="@+id/tvDepTime"
            android:layout_alignStart="@+id/tvDepTime" />

        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvSource"
            android:layout_below="@+id/tvSource"
            android:layout_marginTop="155dp"
            android:text="DESTINATION"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvEstimated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/flight_item_arrival_holder"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/tvDestination"
            android:layout_alignStart="@+id/tvDestination" />

        <TextView
            android:id="@+id/tvGateArr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvEstimated"
            android:layout_alignEnd="@+id/tvGateDep"
            android:layout_alignStart="@+id/tvArrGate"
            android:layout_alignTop="@+id/tvEstimated"
            android:text="@string/flight_item_gate_holder"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTerminalArr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_item_terminal_holder"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/tvGateArr"
            android:layout_alignBottom="@+id/tvGateArr"
            android:layout_alignStart="@+id/tvTerminaDep" />

        <TextView
            android:id="@+id/tvArrTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tvEstimated"
            android:layout_below="@+id/tvEstimated"
            android:layout_marginTop="23dp"
            android:text="@string/flight_item_arrival_value"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvArrGate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvArrTime"
            android:layout_alignBottom="@+id/tvArrTime"
            android:layout_alignStart="@+id/tvGateDep"
            android:text="@string/flight_item_gate_arrival"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvArrTerminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvArrGate"
            android:layout_alignBottom="@+id/tvArrGate"
            android:layout_alignStart="@+id/tvTerminalArr"
            android:text="@string/flight_item_terminal_arrival"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvAirlineName"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans"
            android:gravity="center"
            android:text="@string/flight_item_overview"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />



    </RelativeLayout>

    <Button
        android:id="@+id/btnSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@color/colorHeader"
        android:text="@string/button_subscribe"
        android:onClick="onBtnClicked"/>
</RelativeLayout>