<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.chalmers.student.aviato.FlightActivity">

    <RelativeLayout
        android:id="@+id/rlFlightPresentation"
        android:layout_width="match_parent"
        android:background="@color/colorHeader"
        android:layout_height="25dp">

        <TextView
            android:id="@+id/tvFlightFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/flight_header_from" />

        <TextView
            android:id="@+id/tvFlightTo"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:text="@string/flight_header_to"
            android:layout_marginStart="28dp"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/tvFlightFrom" />

        <TextView
            android:id="@+id/tvFlightAirline"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:text="@string/flight_header_airline"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:layout_marginEnd="46dp" />

    </RelativeLayout>
    <View
        android:id="@+id/vDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/rlFlightPresentation"
        android:background="#c0c0c0"/>
    <ListView
        android:id="@+id/lvFlightContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vDivider"
        android:headerDividersEnabled="false">

    </ListView>




</RelativeLayout>
