<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_color"
    tools:context="se.chalmers.student.aviato.HomeActivity"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/flight_button"
                android:layout_width="271dp"
                android:layout_height="match_parent"
                android:background="@color/colorFlightItem"
                android:textSize="20dp"
                android:text="@string/home_flights" />

            <ImageView
                android:id="@+id/imageView"

                android:background="@color/colorFlightItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:src="@drawable/android_airplane_takeoff"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="#00000000"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/subscription_button"
                android:layout_width="271dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundCenter"
                android:textSize="20dp"
                android:text="@string/home_subscriptions" />

            <ImageView
                android:id="@+id/imageView2"
                android:background="@color/colorBackgroundCenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:src="@drawable/android_subscriptions"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/notification_button"
                android:layout_width="271dp"
                android:layout_height="match_parent"
                android:background="@color/colorFlightItem"
                android:textSize="20dp"
                android:text="@string/home_notifications" />


            <ImageView
                android:id="@+id/imageView3"
                android:background="@color/colorFlightItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:src="@drawable/android_notification"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/settings_button"
                android:layout_width="271dp"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundCenter"
                android:textSize="20dp"
                android:text="@string/home_settings" />



            <ImageView
                android:id="@+id/imageView4"
                android:background="@color/colorBackgroundCenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:src="@drawable/android_settings"/>


        </LinearLayout>


    </LinearLayout>